[package]
name = "puzzlefighter"
version = "0.1.0"
authors = ["Xavier Shay <xavier@rhnh.net>"]

[features]
animation_test = []

[dependencies]
piston_window = "*"
pistoncore-sdl2_window = "*"
piston2d-graphics = "*"
find_folder = "*"
gfx = "*"
gfx_device_gl = "*"
piston-gfx_texture = "*"
uuid = "*"
piston-ai_behavior = "*"
rand = "*"
bitflags = "*"

[dependencies.piston2d-sprite]
git = "https://github.com/xaviershay/sprite"
branch = "issue-113"

[[example]]
name = "make_tiles"
path = "examples/make_tiles.rs"

[dev_dependencies.lodepng]
git = "https://github.com/pornel/lodepng-rust.git"
